--- a/src/app/Layout/seller/seller-feature/seller-feature.component.html
+++ b/src/app/Layout/seller/seller-feature/seller-feature.component.html
@@ -10,7 +10,7 @@
       <div class="text-center col-md-6 col-lg-4">
         <div class="seller-feature">
           <div class="img-wrap mx-auto d-block">
-            <img src="" alt="Image" class="img-fluid">
+            <img src="assets/bootstrap/img/svg/reduce.svg" alt="Image" class="img-fluid">
           </div>
           <h3>کاهش هزینه‌های جانبی فروش تا کمترین مقدار</h3>
         </div>
@@ -18,7 +18,7 @@
       <div class="text-center col-md-6 col-lg-4">
         <div class="seller-feature">
           <div class="img-wrap mx-auto d-block">
-            <img src="" alt="Image" class="img-fluid">
+            <img src="assets/bootstrap/img/svg/sale.svg" alt="Image" class="img-fluid">
           </div>
           <h3>فروش کالای شما در سراسر ایران</h3>
         </div>
@@ -26,7 +26,7 @@
       <div class="text-center col-md-6 col-lg-4">
         <div class="seller-feature">
           <div class="img-wrap mx-auto d-block">
-            <img src="" alt="Image" class="img-fluid">
+            <img src="assets/bootstrap/img/svg/24-1.svg" alt="Image" class="img-fluid">
           </div>
           <h3>فروش محصولات شما در هر ساعت از شبانه روز</h3>
         </div>
@@ -34,7 +34,7 @@
       <div class="text-center col-md-6 col-lg-4">
         <div class="seller-feature">
           <div class="img-wrap mx-auto d-block">
-            <img src="" alt="Image" class="img-fluid">
+            <img src="assets/bootstrap/img/svg/post.svg" alt="Image" class="img-fluid">
           </div>
           <h3>تحویل سفارش‌ها به مشتریان توسط پست</h3>
         </div>
@@ -42,7 +42,7 @@
       <div class="text-center col-md-6 col-lg-4">
         <div class="seller-feature">
           <div class="img-wrap mx-auto d-block">
-            <img src="" alt="Image" class="img-fluid">
+            <img src="assets/bootstrap/img/svg/seller.svg" alt="Image" class="img-fluid">
           </div>
           <h3>تایید ثبت‌نام یکروزه</h3>
         </div>
@@ -50,7 +50,7 @@
       <div class="text-center col-md-6 col-lg-4">
         <div class="seller-feature">
           <div class="img-wrap mx-auto d-block">
-            <img src="" alt="Image" class="img-fluid">
+            <img  src="assets/bootstrap/img/svg/learn.svg" alt="Image" class="img-fluid">
           </div>
           <h3>آموزش رایگان فروش آنلاین</h3>
         </div>
@@ -61,7 +61,7 @@
 <div style="background-color: #F2F5F9">
 
   <svg style="width: 100%" xmlns="http://www.w3.org/2000/svg" width="1597px" height="215px" viewBox="0 0 1597 215" version="1.1">
-    <g transform="translate(0.000000,893.000000) scale(0.100000,-0.100000)" fill="#202040" stroke="none">
+    <g transform="translate(0.000000,893.000000) scale(0.100000,-0.100000)" fill="#c33" stroke="none">
       <path d="M0 4465 l0 -4465 33273 1 c18879 0 33263 4 33252 9 -11 5 -14973 2012 -33250 4460 -18277 2448 -33240 4453 -33252 4455 l-23 5 0 -4465z"/>
     </g>
   </svg>
@@ -79,12 +79,11 @@
                                  data-wow-delay=".3s" class="wow fadeInUp">
               <mat-expansion-panel-header>
                 <mat-panel-title>
-                  شرایط استفاده از کد تخفیف اولین خرید از به قیمت چیست؟
+                  چه کسانی میتوانند در مرکز فروشندگان به قیمت، فروشنده باشند ؟
                 </mat-panel-title>
               </mat-expansion-panel-header>
               <p>
-                سیستم هوشمند به قیمت، پس از بررسی حساب کاربری در صورتی که مالک آن مشتری جدید به قیمت باشد، امکان استفاده از کد تخفیف خرید اول را ایجاد می کند و در سایر موارد به کاربر متن "کد تخفیف وارد شده، تنها برای کاربران جدید قابل استفاده است و طبق بررسی ها شما به عنوان کاربر جدید شناسایی نشدید" اعلام می شود.
-              </p>
+                مرکز فروشندگان به قیمت، پلتفرمی است که در آن فروشندگان کالاهای مختلف از جمله برند های معتبر، فروشندگان خرد و کلان، صاحبان کسب و کارهای کوچک و هر شخصی که کالایی برای عرضه دارد، می توانند به صورت آنلاین محصولات خود را در قالب فروشنده حقیقی و فروشنده حقوقی به فروش برسانند . فروشنده حقیقی: فردی است که دارای خصوصیاتی مختص به خود مانند نام، نام خانوادگی، تاریخ تولد، کد ملی، شماره شناسنامه و غیره می باشد. فروشنده حقوقی: موسسات یا شرکت هایی هستند که پس از طی مراحل قانونی به ثبت می‌رسند و دارای مشخصاتی مانند نام شخص حقوقی، تاریخ ثبت، شماره ثبت، کد شناسایی، کد اقتصادی، موضوع فعالیت و غیره می باشند.              </p>
             </mat-expansion-panel>
 
             <mat-expansion-panel  style="border-radius: 5px" opened="true"
@@ -93,12 +92,27 @@
                                   data-wow-delay=".3s" class="wow fadeInUp">
               <mat-expansion-panel-header>
                 <mat-panel-title>
-                  چرا به شماره سفارش نیاز داریم؟
+                  چه مدارکی جهت ثبت‌نام در مرکز فروشندگان دیجی‌کالا مورد نیاز است؟
                 </mat-panel-title>
               </mat-expansion-panel-header>
               <p>
-                به قیمت برای افزایش سرعت پاسخ گویی به مشتریان با دریافت کد سفارش این امکان رو ایجاد کرده که بتونید در زمان کمتری به نتیجه مورد نظر خود برسید
-              </p>
+                آدرس ایمیل
+                شماره شبا حساب بانکی؛ به نام و مطابق با شخص یا شرکت ثبت‌نام کننده
+                شماره تلفن همراه؛ جهت دریافت کد تایید ثبت‌نام
+
+
+                برای فروشنده‌ی حقیقی:
+                تصویر کارت ملی
+                تصویر گواهی ارزش افزوده معتبر (اگر مشمول مالیات بر ارزش افزوده هستید)
+
+
+                برای فروشنده‌ی حقوقی:
+                شماره‌ی ثبت
+                شناسه‌ی ملی
+                کد اقتصادی
+                تصویر گواهی ارزش افزوده‌ی معتبر ( با مدت اعتبار حداقل 2 ماه )
+                تصویر پشت و روی کارت ملی همه‌ی صاحبان حق امضاء در قالب یک عکس در کنار هم
+                تصویر آخرین تغییرات روزنامه‌ی رسمی              </p>
             </mat-expansion-panel>
 
             <mat-expansion-panel style="border-radius: 5px" opened="true"
@@ -107,13 +121,31 @@
                                  data-wow-delay=".3s" class="wow fadeInUp">
               <mat-expansion-panel-header>
                 <mat-panel-title>
-                  چطور درخواست خود را جهت بازگردان کالا (مرجوعی کالا) به شما اطلاع دهم؟
+                  خدمات به قیمت برای فروشندگان چیست؟
                 </mat-panel-title>
               </mat-expansion-panel-header>
               <p>
-                وارد پنل کاربری خود، لیست سفارشات، تحویل شده شوید و از قسمت ثبت مرجوعی، درخواست خود را ثبت کنید.
-              </p>
+                پنل تخصصی مدیریت محصولات، قیمت گذاری، مدیریت سفارش‌ها و فروش برای فروشندگان<br/>
+                دسترسی به وب سایت مرکز آموزش فروشندگان به قیمت با 100 ها مقاله ی آموزشی<br/>
+                راهنمایی درج و فروش محصولات در به قیمت پس از اتمام دوره آموزشی، توسط تیم مجرب جذب و آماده‌سازی فروشندگان<br/>
+                خدمات پشتیبانی فروشندگان به صورت تلفنی و ایمیل<br/>
+                امکان فروش در گروه های کالایی مختلف<br/>
+                پردازش،بسته بندی و ارسال سفارش‌های مشتریان به سراسر ایران<br/>
+                خدمات تولید محتوا و عکاسی از کالاها توسط تیم مجرب کارخانه محتوای به قیمت<br/>
+                بازدید روزانه میلیون‌ها نفر از سایت به قیمت و بازاریابی و فروش محصولات              </p>
             </mat-expansion-panel>
+
+            <mat-expansion-panel style="border-radius: 5px" opened="true"
+                                 closed="false"
+                                 class="mat-elevation-z0"
+                                 data-wow-delay=".3s" class="wow fadeInUp">
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  قوانین و مقررات فروش در سایت به قیمت چیست؟
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <p>
+                برای فروشنده شدن در سایت به قیمت رعایت یک سری از قوانین الزامی است که در مقاله‌ای با همین عنوان در وب سایت مرکز آموزش فروشندگان به قیمت جمع آوری شده است. برای اطلاع از قوانین فروش در سایت به قیمت، حتما مقاله قوانین و مقررات فروش در سایت به قیمت را به دقت مطالعه کنید.            </mat-expansion-panel>
 
           </mat-accordion>
         </div>
@@ -121,7 +153,7 @@
     </div>
   </div>
 </div>
-<div style="background-color: #202040">
+<div style="background-color: #CC3333">
   <svg style="width: 100%;transform: scale(-1,1);" xmlns="http://www.w3.org/2000/svg" width="1597px" height="215px" viewBox="0 0 1597 215" version="1.1">
     <g transform="translate(0.000000,893.000000) scale(0.100000,-0.100000)" fill="#f2f5f9" stroke="none">
       <path d="M0 4465 l0 -4465 33273 1 c18879 0 33263 4 33252 9 -11 5 -14973 2012 -33250 4460 -18277 2448 -33240 4453 -33252 4455 l-23 5 0 -4465z"/>
