--- a/src/app/Layout/seller/seller-footer/seller-footer.component.css
+++ b/src/app/Layout/seller/seller-footer/seller-footer.component.css
@@ -1,6 +1,6 @@
 .seller-footer{
   padding-top: 15px;
-  background-color: #202040;
+  background-color: #4d4d4d;
 }
 .seller-footer p{
   color: white;
