--- a/src/app/Layout/seller/seller-header/seller-header.component.html
+++ b/src/app/Layout/seller/seller-header/seller-header.component.html
@@ -1,7 +1,7 @@
 <nav class="site-nav text-right" dir="rtl">
   <div class="container">
     <div class="site-navigation">
-      <a routerLink="/" class="logo">BeGheymat.com</a>
+      <a routerLink="/" class="logo">begheymat.com</a>
       <ul class="d-none d-lg-inline-block text-left site-menu">
         <li><a routerLink="/seller">راهنمای ثبت نام</a></li>
         <li><a routerLink="/seller">آموزش پنل فروشندگان</a></li>
@@ -51,10 +51,10 @@
   <div class="d-flex flex-column">
     <div class="mb-auto">
       <ul class="mobile-menu text-right site-menu">
-        <li><a routerLink="/home/seller">راهنمای ثبت نام</a></li>
-        <li><a routerLink="/home/seller">آموزش پنل فروشندگان</a></li>
-        <li><a routerLink="/home/seller/login">ورود به پنل فروشندگان</a></li>
-        <li><a routerLink="/home/seller/register">ثبت نام</a></li>
+        <li><a routerLink="/seller">راهنمای ثبت نام</a></li>
+        <li><a routerLink="/seller">آموزش پنل فروشندگان</a></li>
+        <li><a routerLink="/seller/login">ورود به پنل فروشندگان</a></li>
+        <li><a routerLink="/seller/register">ثبت نام</a></li>
       </ul>
     </div>
   </div>
