--- a/src/app/Layout/subscription/subscription.component.html
+++ b/src/app/Layout/subscription/subscription.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="container-fluid mt-2 gift-container py-4" dir="rtl">
   <div class="row justify-content-center gift-bg py-3">
     <div class="col-8 align-items-center">
@@ -8,13 +10,16 @@
           </h3>
         </div>
         <div class="col-sm-12 col-lg-4 align-items-center mt-2">
-          <input pInputText placeholder="عضویت با ایمیل" style="background-color: #ffffff" [(ngModel)]="email">
+<!--          <input pInputText placeholder="عضویت با ایمیل" style="background-color: #ffffff" [(ngModel)]="email">-->
+          <input pInputText class="form-control w-100" placeholder="عضویت با ایمیل" [(ngModel)]="email">
+
         </div>
         <div class="col-sm-12 col-lg-2 align-items-center d-block text-center mt-2">
           <button class="button" (click)="regEmailNewsletter()">ثبت نام</button>
         </div>
         <div class="col-sm-12 col-lg-4 align-items-center mt-2">
-          <p-inputNumber mode="decimal"  [useGrouping]="false" [maxlength]="11" [minlength]="11"  [format]="" class="text-center"  placeholder="عضویت با شماره موبایل" [(ngModel)]="mobile"></p-inputNumber>
+          <input pInputText class="form-control w-100" placeholder="عضویت با شماره موبایل" [(ngModel)]="mobile" maxlength="11" minlength="11" >
+<!--          <p-inputNumber mode="decimal"  [useGrouping]="false" [maxlength]="11" [minlength]="11"  [format]="" class="text-center"  placeholder="عضویت با شماره موبایل" [(ngModel)]="mobile"></p-inputNumber>-->
         </div>
         <div class="col-sm-12 col-lg-2 align-items-center d-block text-center mt-2">
           <button class="button" (click)="regSmsNewsletter()">ثبت نام</button>
