--- a/src/app/Layout/cart/cart.component.css
+++ b/src/app/Layout/cart/cart.component.css
@@ -1,5 +1,7 @@
+
 .fas{
   font-family: "Font Awesome 5 Pro"!important;
+
 }
 .container{
   border-width: thick;
@@ -18,7 +20,7 @@
   border-radius: 25px;
 }
 :host::ng-deep.mat-step-header .mat-step-icon-selected{
-  background: #CC3333 ;
+  background: #EF2B2F ;
   height: 50px;
   width: 50px;
 }
@@ -98,7 +100,12 @@ span{
   color: #060705 !important;
   font-size: 13px;
 }
+:host::ng-deep.mat-stepper-vertical{
+  margin-top: -15px!important;
+  margin-right: -15px!important;
+  margin-left: -15px!important;
 
+}
 :host::ng-deep.mat-step-icon-content.ng-star-inserted{
   font-family: IRANSansWeb_Bold;
 }
@@ -111,8 +118,8 @@ span{
 }
 
 :host::ng-deep.mat-stepper-vertical-line::before{
-  color: #e3e3e3!important;
-
+  color: #e64a19!important;
+  border-width: medium!important;
   border-style: solid!important;
   margin-right: 10px!important;
   margin-top: 5px!important;
@@ -154,24 +161,45 @@ textarea#tozihat{
 
 
 
-@media (min-width: 768px)  and (max-width: 991px){
-  .mobile{
-  display: block;
-  margin-left:3%;
-  }
-  ::ng-deep ng-template{
-  font-size: 13px!important;
-  }
-  .pc{
-  /*display: none;*/
-  }
-}
+/*@media (min-width: 768px)  and (max-width: 991px){*/
+/*#mobile{*/
+/*display: block;*/
+/*margin-left:3%;*/
+/*}*/
+/*::ng-deep ng-template{*/
+/*font-size: 13px!important;*/
+/*}*/
+/*#headerstepmobile{*/
+/*font-size: 14px;*/
+/*color: #CC0000;*/
+/*text-align: center;*/
+/*margin-top: -30px;*/
+/*margin-bottom: 30px;*/
+/*}*/
+/*#mobile-title{*/
+/*font-size: 14px;*/
+/*}*/
+/*#pc{*/
+/*display: none;*/
+/*}*/
+/*}*/
 @media (max-width: 768px) {
   ::ng-deep ng-template{
     font-size: 13px!important;
   }
+  #headerstepmobile{
+    font-size: 14px;
+    color: #CC0000;
+    text-align: center;
+    margin-top: -30px;
+    margin-bottom: 30px;
+  }
   label{
     font-size: 12px;
+
+  }
+  #title{
+    font-size: 14px;
   }
 }
 
@@ -571,7 +599,19 @@ hr{
     display: none;
   }
 }
+@media (min-width: 768px) {
+  .mobile{
+    display: none;
 
+  }
+  ::ng-deep.mat-vertical-content-container {
+    margin-left: 0;
+    margin-right: 55px!important;
+  }
+  .pc{
+    display: block;
+  }
+}
 .example-radio-group {
   display: flex;
   flex-direction: column;
@@ -764,8 +804,8 @@ label{
 .nav-tabs .nav-item .nav-link.active {
   background-color: #ffffff!important;
   border: none!important;
-  border-top: 2px #CC3333 solid!important;
-  color: #CC3333;
+  border-top: 2px #EF2B2F solid!important;
+  color: #EF2B2F;
   font-weight: bold;
   line-height: 35px;
 }
@@ -783,7 +823,7 @@ label{
 :host ::ng-deep .p-datatable-responsive-demo .p-datatable-tbody > tr > td .p-column-title {
   display: none;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 40rem) {
   :host ::ng-deep .p-datatable.p-datatable-responsive-demo .p-datatable-thead > tr > th, :host ::ng-deep .p-datatable.p-datatable-responsive-demo .p-datatable-tfoot > tr > td {
     display: none !important;
     text-align: right!important;
@@ -808,15 +848,57 @@ label{
   }
 }
 
-
-:host ::ng-deep .p-inputnumber.p-inputnumber-buttons-horizontal{
-  flex-direction: row-reverse;
-  height: 33px;
+/*df*/
+.product-item {
+  display: flex;
+  align-items: center;
+  padding: .5rem;
+  width: 100%;
+}
+img {
+  width: 75px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  margin-right: 1rem;
 }
 
-:host ::ng-deep .pi-minus, :host ::ng-deep .pi-plus {
-  font-size: .75rem!important;
+.product-list-detail {
+  flex: 1 1 0;
 }
-:host ::ng-deep .pi-trash{
-  font-size: 1.5rem;
+
+.product-list-action {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.product-category-icon {
+  vertical-align: middle;
+  margin-right: .5rem;
+}
+
+.product-category {
+  vertical-align: middle;
+  line-height: 1;
+}
+
+
+@media screen and (max-width: 576px) {
+  .product-item {
+    flex-wrap: wrap;
+  }
+  .image-container {
+    width: 100%;
+    text-align: center;
+  }
+
+  img {
+    margin: 0 0 1rem 0;
+    width: 100px;
+  }
+}
+
+.pi-trash{
+  margin-right: 150px;
+  z-index: 999999;
+  position: absolute;
 }
