--- a/src/app/Layout/cart/cart.component.css
+++ b/src/app/Layout/cart/cart.component.css
@@ -1,8 +1,7 @@
 
-.fas{
-  font-family: "Font Awesome 5 Pro"!important;
-
-}
+/*.fas{*/
+/*  font-family: "Font Awesome 5 Pro"!important;*/
+/*}*/
 .container{
   border-width: thick;
   border-style: solid;
