--- a/src/app/Core/dashboardAdmin/index/index.component.html
+++ b/src/app/Core/dashboardAdmin/index/index.component.html
@@ -21,6 +21,8 @@
 
         <mat-list-item [routerLink]="['product']"> <i class="pi pi-user p-pl-4 text-white" style="font-size: 1rem"></i> مدیریت محصولات</mat-list-item>
         <mat-divider></mat-divider>
+        <mat-list-item [routerLink]="['feature']"> <i class="pi pi-user p-pl-4 text-white" style="font-size: 1rem"></i> مدیریت ویژگی محصولات</mat-list-item>
+        <mat-divider></mat-divider>
         <mat-list-item [routerLink]="['homepage']"><i class="pi pi-money-bill p-pl-4 text-white" style="font-size: 1rem"></i>مدیریت صفحه اصلی سایت </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item routerLink="./listTeacher"><i class="pi pi-shopping-cart p-pl-4 text-white" style="font-size: 1rem"></i>تراکنش های مالی</mat-list-item>
