--- a/src/app/Layout/products/products.component.html
+++ b/src/app/Layout/products/products.component.html
@@ -130,105 +130,105 @@
 
 
 
-        <div class="col-sm-12 col-md-6 col-lg-4" dir="ltr" *ngFor="let i of Products">
-          <div class="block-products-carousel-column" >
-            <div class="block-products-carousel-cell" >
-              <div class="product-card product-card-layout-grid" >
-                <div class="product-card-actions-list" >
-                  <button class="product-card-action product-card-action-quickview" type="button"
-                          aria-label="Quick view">
-                    <svg width="16" height="16">
-                      <path
-                        d="M14,15h-4v-2h3v-3h2v4C15,14.6,14.6,15,14,15z M13,3h-3V1h4c0.6,0,1,0.4,1,1v4h-2V3z M6,3H3v3H1V2c0-0.6,0.4-1,1-1h4V3zM3,13h3v2H2c-0.6,0-1-0.4-1-1v-4h2V13z"></path>
-                    </svg>
-                  </button>
-                  <button class="product-card-action product-card-action-wishlist" type="button"
-                          aria-label="Add to wish list">
-                    <svg width="16" height="16">
-                      <path
-                        d="M13.9,8.4l-5.4,5.4c-0.3,0.3-0.7,0.3-1,0L2.1,8.4c-1.5-1.5-1.5-3.8,0-5.3C2.8,2.4,3.8,2,4.8,2s1.9,0.4,2.6,1.1L8,3.7l0.6-0.6C9.3,2.4,10.3,2,11.3,2c1,0,1.9,0.4,2.6,1.1C15.4,4.6,15.4,6.9,13.9,8.4z"></path>
-                    </svg>
-                  </button>
-                  <button class="product-card-action product-card-action-compare" type="button"
-                          aria-label="Add to compare">
-                    <svg width="16" height="16">
-                      <path
-                        d="M9,15H7c-0.6,0-1-0.4-1-1V2c0-0.6,0.4-1,1-1h2c0.6,0,1,0.4,1,1v12C10,14.6,9.6,15,9,15z"></path>
-                      <path d="M1,9h2c0.6,0,1,0.4,1,1v4c0,0.6-0.4,1-1,1H1c-0.6,0-1-0.4-1-1v-4C0,9.4,0.4,9,1,9z"></path>
-                      <path
-                        d="M15,5h-2c-0.6,0-1,0.4-1,1v8c0,0.6,0.4,1,1,1h2c0.6,0,1-0.4,1-1V6C16,5.4,15.6,5,15,5z"></path>
-                    </svg>
-                  </button>
-                </div>
-                <div class="product-card-image">
-                  <div class="image image-type-product">
-                    <a class="image-body">
-                      <img class="image-tag" [src]="i['image']" alt="">
-                    </a>
-                  </div>
-                </div>
-                <div class="product-card-info text-right">
-                  <div class="product-card-meta">
-                    <div class="d-flex flex-row">
-                      <span class="product-catagory mr-auto">{{i['Seller'][0].name}}</span>
-                      <span class="product-catagory ">{{i['subCategory']}}</span>
-                    </div>
-                  </div>
-                  <div class="product-card-name">
-                    <div>
-                      <div class="product-card-badges">
-<!--                        <div class="tag-badge tag-badge-sale">%15</div>-->
-                        <div class="tag-badge tag-badge-sale"*ngIf="i['offer']===true">%{{i['offerPercent']}}</div>
-                        <div class="tag-badge tag-badge-sale" *ngIf="i['offer']===false">{{i['topText']}}</div>
+
+
+
+
+            <div *ngFor="let item of pageOfItems">
+              <div class="col-sm-12 col-md-6 col-lg-4" dir="ltr" *ngFor="let i of Products">
+                <div class="block-products-carousel-column" >
+                  <div class="block-products-carousel-cell" >
+                    <div class="product-card product-card-layout-grid" >
+                      <div class="product-card-actions-list" >
+                        <button class="product-card-action product-card-action-quickview" type="button"
+                                aria-label="Quick view">
+                          <svg width="16" height="16">
+                            <path
+                              d="M14,15h-4v-2h3v-3h2v4C15,14.6,14.6,15,14,15z M13,3h-3V1h4c0.6,0,1,0.4,1,1v4h-2V3z M6,3H3v3H1V2c0-0.6,0.4-1,1-1h4V3zM3,13h3v2H2c-0.6,0-1-0.4-1-1v-4h2V13z"></path>
+                          </svg>
+                        </button>
+                        <button class="product-card-action product-card-action-wishlist" type="button"
+                                aria-label="Add to wish list">
+                          <svg width="16" height="16">
+                            <path
+                              d="M13.9,8.4l-5.4,5.4c-0.3,0.3-0.7,0.3-1,0L2.1,8.4c-1.5-1.5-1.5-3.8,0-5.3C2.8,2.4,3.8,2,4.8,2s1.9,0.4,2.6,1.1L8,3.7l0.6-0.6C9.3,2.4,10.3,2,11.3,2c1,0,1.9,0.4,2.6,1.1C15.4,4.6,15.4,6.9,13.9,8.4z"></path>
+                          </svg>
+                        </button>
+                        <button class="product-card-action product-card-action-compare" type="button"
+                                aria-label="Add to compare">
+                          <svg width="16" height="16">
+                            <path
+                              d="M9,15H7c-0.6,0-1-0.4-1-1V2c0-0.6,0.4-1,1-1h2c0.6,0,1,0.4,1,1v12C10,14.6,9.6,15,9,15z"></path>
+                            <path d="M1,9h2c0.6,0,1,0.4,1,1v4c0,0.6-0.4,1-1,1H1c-0.6,0-1-0.4-1-1v-4C0,9.4,0.4,9,1,9z"></path>
+                            <path
+                              d="M15,5h-2c-0.6,0-1,0.4-1,1v8c0,0.6,0.4,1,1,1h2c0.6,0,1-0.4,1-1V6C16,5.4,15.6,5,15,5z"></path>
+                          </svg>
+                        </button>
                       </div>
-                      <a>{{i['title']}}</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="product-card-footer">
-                  <button class="product-card-addtocart-icon" type="button" aria-label="Add to cart" (click)="addCart(Products)" [disabled]="InventoryState">
-                    <svg width="20" height="20">
-                      <circle cx="7" cy="17" r="2"></circle>
-                      <circle cx="15" cy="17" r="2"></circle>
-                      <path d="M20,4.4V5l-1.8,6.3c-0.1,0.4-0.5,0.7-1,0.7H6.7c-0.4,0-0.8-0.3-1-0.7L3.3,3.9C3.1,3.3,2.6,3,2.1,3H0.4C0.2,3,0,2.8,0,2.6
+                      <div class="product-card-image">
+                        <div class="image image-type-product">
+                          <a class="image-body">
+                            <img class="image-tag" [src]="i['image']" alt="">
+                          </a>
+                        </div>
+                      </div>
+                      <div class="product-card-info text-right">
+                        <div class="product-card-meta">
+                          <div class="d-flex flex-row">
+                            <span class="product-catagory mr-auto">{{i['Seller'][0].name}}</span>
+                            <span class="product-catagory ">{{i['subCategory']}}</span>
+                          </div>
+                        </div>
+                        <div class="product-card-name">
+                          <div>
+                            <div class="product-card-badges">
+                              <!--                        <div class="tag-badge tag-badge-sale">%15</div>-->
+                              <div class="tag-badge tag-badge-sale"*ngIf="i['offer']===true">%{{i['offerPercent']}}</div>
+                              <div class="tag-badge tag-badge-sale" *ngIf="i['offer']===false">{{i['topText']}}</div>
+                            </div>
+                            <a>{{i['title']}}</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="product-card-footer">
+                        <button class="product-card-addtocart-icon" type="button" aria-label="Add to cart" (click)="addCart(Products)" [disabled]="InventoryState">
+                          <svg width="20" height="20">
+                            <circle cx="7" cy="17" r="2"></circle>
+                            <circle cx="15" cy="17" r="2"></circle>
+                            <path d="M20,4.4V5l-1.8,6.3c-0.1,0.4-0.5,0.7-1,0.7H6.7c-0.4,0-0.8-0.3-1-0.7L3.3,3.9C3.1,3.3,2.6,3,2.1,3H0.4C0.2,3,0,2.8,0,2.6
 	V1.4C0,1.2,0.2,1,0.4,1h2.5c1,0,1.8,0.6,2.1,1.6L5.1,3l2.3,6.8c0,0.1,0.2,0.2,0.3,0.2h8.6c0.1,0,0.3-0.1,0.3-0.2l1.3-4.4
 	C17.9,5.2,17.7,5,17.5,5H9.4C9.2,5,9,4.8,9,4.6V3.4C9,3.2,9.2,3,9.4,3h9.2C19.4,3,20,3.6,20,4.4z"></path>
-                    </svg>
-                  </button>
+                          </svg>
+                        </button>
 
-                  <div class="product-card-prices">
-                    <div class="product-card-price product-card-price-old">
-                      <small *ngIf="i['offer']===true">{{i['price']|number}}</small>
-                      <b *ngIf="i['offer']===false">{{i['price']|number}}</b>
+                        <div class="product-card-prices">
+                          <div class="product-card-price product-card-price-old">
+                            <small *ngIf="i['offer']===true">{{i['price']|number}}</small>
+                            <b *ngIf="i['offer']===false">{{i['price']|number}}</b>
+                          </div>
+                          <div class="product-card-price product-card-price-new">
+                            <b  *ngIf="i['offer']===true">{{i['price']-(i['price']*i['offerPercent'])/100|number}}</b>
+                            تومان</div>
+
+
+                        </div>
+
+
+                      </div>
                     </div>
-                    <div class="product-card-price product-card-price-new">
-                      <b  *ngIf="i['offer']===true">{{i['price']-(i['price']*i['offerPercent'])/100|number}}</b>
-                      تومان</div>
-
-
                   </div>
-
-
                 </div>
               </div>
+
             </div>
+
+          <div class="card-footer pb-0 pt-3">
+            <jw-pagination [items]="items" (changePage)="onChangePage($event)"></jw-pagination>
           </div>
-        </div>
-
 
       </div>
 
-      <div class="product-pagination">
-        <ul>
-          <li class="no"><a href="#">«</a></li>
-          <li class="pg active"><a href="#">1</a></li>
-          <li class="pg"><a href="#">2</a></li>
-          <li class="pg"><a href="#">3</a></li>
-          <li class="pg"><a href="#">4</a></li>
-          <li class="pg"><a href="#">5</a></li>
-          <li class="no"><a href="#">»</a></li>
-        </ul>
-      </div>
+
     </div>
   </div>
 
