--- a/src/app/SharedComponent/header/middle-header/middle-header.component.html
+++ b/src/app/SharedComponent/header/middle-header/middle-header.component.html
@@ -2,7 +2,8 @@
   <div class="site-header__logo">
     <a class="nuxt-link-exact-active nuxt-link-active" routerLink="/">
       <div class=" text-right logo-img d-block">
-        <img height="70px" src="./assets/bootstrap/img/bg.png">
+        <img style="height:100px" src="./assets/bootstrap/img/logo.svg">
+
       </div>
     </a>
   </div>
