--- a/src/app/Core/dashboard-seller/index/index.component.css
+++ b/src/app/Core/dashboard-seller/index/index.component.css
@@ -41,3 +41,10 @@ mat-nav-list a{
   color: antiquewhite;
 }
 
+:host ::ng-deep .mat-list-item-content{
+  font-family: IRANSans_Light;
+}
+.top-row{
+  font-family: IRANSans_Bold;
+  font-size: 13px;
+}
