seller-product-reg

--- a/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
+++ b/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
@@ -26,7 +26,7 @@
             <p-dropdown appendTo="body" emptyFilterMessage="نتیجه ای یافت نشد"
                         [options]="categories"
                         formControlName="categoryID"
-                        optionLabel="title" [filter]="true" [showClear]="true">
+                        optionLabel="title" [filter]="true" placeholder="-- انتخاب کنید --">
               <ng-template pTemplate="selectedItem">
                 <div class="state-item state-item-value"
                      *ngIf="form.controls['categoryID'].value">
