--- a/src/app/SharedComponent/header/nav-header/nav-header.component.html
+++ b/src/app/SharedComponent/header/nav-header/nav-header.component.html
@@ -386,7 +386,7 @@
           <ul class="nav-links__list">
             <li class="nav-links__item">
               <a class="nav-links__item-link">
-                <div class="nav-links__item-body" [routerLink]="['/seller']" target="_blank" >
+                <div class="nav-links__item-body" [routerLink]="['/home/seller']" target="_blank" >
                   فروشنده شو
                 </div>
               </a>
