--- a/src/app/Core/dashboard-seller/index/index.component.html
+++ b/src/app/Core/dashboard-seller/index/index.component.html
@@ -13,11 +13,11 @@
         <mat-list-item class="iran" [routerLink]="['/seller/profile']"> <i class="pi pi-user p-pl-4 text-white" style="font-size: 1rem"></i> اطلاعات کاربری</mat-list-item>
         <mat-divider></mat-divider>
 
-          <mat-list-item [routerLink]="['/seller/product']"> <i class="pi pi-file p-pl-4 text-white" style="font-size: 1rem"></i> محصولات من</mat-list-item>
-          <mat-divider></mat-divider>
-          <mat-list-item [routerLink]="['/seller/product/register']"> <i class="pi pi-plus p-pl-4 text-white" style="font-size: 1rem"></i> ثبت محصول جدید</mat-list-item>
-          <mat-divider></mat-divider>
+        <mat-list-item [routerLink]="['/seller/product']"> <i class="pi pi-file p-pl-4 text-white" style="font-size: 1rem"></i> محصولات من</mat-list-item>
+        <mat-divider></mat-divider>
 
+        <mat-list-item [routerLink]="['/seller/feature']"> <i class="pi pi-file p-pl-4 text-white" style="font-size: 1rem"></i> ویژگی محصولات</mat-list-item>
+        <mat-divider></mat-divider>
 
       </mat-list>
 
