--- a/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.css
+++ b/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.css
@@ -3,6 +3,16 @@
   padding: 15px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  font-family: IRANSans_Light;
+}
+
+.titlepage a{
+  font-size: 15px;
+  color: #4d4d4d;
+}
+.titlepage span{
+  font-size: 15px;
+  color: #a2a2a2;
 }
 form{
   font-family: IRANSans_Light;
