--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
+
+<div id="overlay" *ngIf="overlayService.showOverlay">
+  <div class="container-fluid no-gutters" style="width: 100%; height: 100vh;">
+    <div class="row justify-content-center no-gutters h-100">
+      <div class="col-12 align-self-center no-gutters text-center">
+        <p-progressSpinner [style]="{width: '50px', height: '50px'}" styleClass="custom-spinner" strokeWidth="8"animationDuration="1s"></p-progressSpinner>
+      </div>
+    </div>
+  </div>
+</div>
 <router-outlet></router-outlet>
 
