--- a/src/app/Core/dashboard-seller/feature/add-feature-dialog/add-feature-dialog.component.html
+++ b/src/app/Core/dashboard-seller/feature/add-feature-dialog/add-feature-dialog.component.html
@@ -1,4 +1,4 @@
-
+<p-toast position="center"></p-toast>
 <div style="direction: rtl; text-align: right">
   <form [formGroup]="form" (ngSubmit)="submitForm()" class="w-100 mt-3">
 
