--- a/src/app/Core/dashboard-seller/index/index.component.css
+++ b/src/app/Core/dashboard-seller/index/index.component.css
@@ -2,14 +2,12 @@
   height: 100%;
   width: 100%;
 }
-
 .sidenav {
-  /*bottom:100px!important;*/
   width: 250px;
   background: #37474f;
   border-left: none;
 }
-.title-sidebar{
+.title-sidebar {
   font-family: IRANSans_Bold;
   font-size: 16px;
   color: #FFFFFF;
@@ -19,32 +17,100 @@
 .sidenav .mat-toolbar {
   background: inherit;
 }
-
-
-
-mat-nav-list a{
-  font-family:IRANSans_Light;
+mat-nav-list a {
+  font-family: IRANSans_Light;
   font-size: 16px;
   color: #FFFFFF;
 }
-
-:host::ng-deep.mat-list-item-content{
-  font-family:  IRANSans_Light;
+:host ::ng-deep .mat-list-item-content {
+  font-family: IRANSans_Light;
   color: white;
 }
-:host::ng-deep.p-toolbar {
-  background: #37474f!important;
+:host ::ng-deep .p-toolbar {
+  background: #37474f !important;
   height: 55px;
 }
+
 .mat-icon-button {
   margin-top: -15px;
   color: antiquewhite;
 }
-
-:host ::ng-deep .mat-list-item-content{
+:host ::ng-deep .mat-list-item-content {
   font-family: IRANSans_Light;
 }
-.top-row{
+.top-row {
   font-family: IRANSans_Bold;
   font-size: 13px;
 }
+
+
+.pnl-content .box{
+  background-color: white;
+  padding: 15px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+:host ::ng-deep .p-datatable .p-datatable-thead > tr > th {
+  text-align: right!important;
+  font-family: IRANSans_Bold;
+}
+:host ::ng-deep .p-datatable .p-datatable-tbody > tr > td {
+  text-align: right!important;
+  font-family: IRANSans_Light;
+}
+:host ::ng-deep .pi-chevron-right:before {
+  content: "\e902";
+}
+:host ::ng-deep .p-input-icon-left {
+  position: relative;
+  display: inline-block;
+}
+button{
+  font-family: IRANSans_Light!important;
+  font-size: 13px;
+}
+:host ::ng-deep .p-paginator-bottom{
+  font-family: IRANSans_Light;
+  direction: ltr;
+  text-align: right;
+}
+:host ::ng-deep .p-paginator-bottom button{
+  font-family: IRANSans_Light;
+}
+:host ::ng-deep .p-dropdown-label{
+  font-family: IRANSans_Light;
+  padding-left: 10px!important;
+  padding-right: 10px!important;
+}
+:host ::ng-deep .p-button-icon-left {
+  margin-left: 0.5rem;
+  margin-right: unset;
+}
+:host ::ng-deep .p-dialog .p-dialog-footer {
+  text-align: left;
+}
+:host ::ng-deep .p-dialog.p-confirm-dialog .p-confirm-dialog-message {
+  margin-right: 1rem;
+  margin-left: unset!important;
+}
+:host ::ng-deep .p-toast .p-toast-message .p-toast-message-content .p-toast-message-text{
+  margin: 0 1rem 0 0!important;
+}
+:host ::ng-deep .p-toast .p-toast-message.p-toast-message-error {
+  border-width: 0 6px 0 0px!important;
+}
+:host ::ng-deep .p-toast .p-toast-message.p-toast-message-success {
+  border-width: 0 6px 0 0px!important;
+}
+
+
+
+:host ::ng-deep .p-dialog{
+  direction: rtl!important;
+  text-align: right!important;
+}
+:host ::ng-deep .p-dialog-header{
+  direction: rtl!important;
+  text-align: right!important;
+}
+
