--- a/src/app/Core/dashboard-seller/product-seller/product-seller.component.html
+++ b/src/app/Core/dashboard-seller/product-seller/product-seller.component.html
@@ -1,3 +1,5 @@
+<p-toast position="center"></p-toast>
+<p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000"></p-confirmDialog>
 <div class="pnl-content p-3">
   <div class="box text-right" dir="rtl">
 
