--- a/src/app/Layout/seller/seller-login/seller-login.component.html
+++ b/src/app/Layout/seller/seller-login/seller-login.component.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid" dir="rtl">
   <div class="row pb-3 justify-content-center seller-login">
-    <div class="col-sm-8 align-items-center">
+    <div class="col-sm-12 col-md-8 align-items-center">
       <div class="row mt-5 justify-content-center text-center">
         <div class="col-sm-12 col-lg-6">
           <h2>
@@ -17,14 +17,13 @@
       </div>
       <div class="row mt-3 justify-content-center">
 
-        <div class="col-sm-12 col-lg-6">
+        <div class="col-sm-12 col-md-8">
           <div class="box">
             <form (ngSubmit)="login()" [formGroup]="form" class="w-100">
               <div class="row">
                 <div class="col-12 text-center">
                   <div class="form-group">
                   <span class="p-input-icon-right w-100">
-                    <i class="pi pi-user text-dark"></i>
                   <input pKeyFilter="int" class="form-control" formControlName="mobile" maxlength="11"
                          minlength="11"
                          name="mobile" pInputText
@@ -44,7 +43,6 @@
                 <div class="col-12 text-center">
                   <div class="form-group mb-3">
                   <span class=" p-input-icon-right w-100">
-                  <i class="pi pi-eye text-dark"></i>
                   <input class="form-control" formControlName="password"
                          minlength="5"
                          name="password" pInputText
@@ -60,14 +58,15 @@
                     </ul>
                   </div>
                 </div>
-                <div class="col-4 text-right">
-                  <a routerLink="/home/seller/register">ثبت نام کنید</a>
-                </div>
-                <div class="col-8 text-left">
+                <div class="col-8 text-right">
                   <span class="login-link pointer">
                     <i class="pi pi-key text-dark ml-3"></i> کلمه عبور خود را فراموش کرده ام
                   </span>
                 </div>
+                <div class="col-4 text-left">
+                  <a routerLink="/home/seller/register">ثبت نام کنید</a>
+                </div>
+
 
                 <div class="col-md-12 col-lg-12 pt-4">
                   <div class="text-center">
